Update auth method mention
