# lib/python/authclient/api/signout_api.py
@@ -167,7 +167,7 @@ class SignoutApi:
             ['*/*'])  # noqa: E501
 
         # authentication setting
-        _auth_settings = []  # noqa: E501
+        _auth_settings = ['Authentication']  # noqa: E501
 
         _response_types_map = {
             '200': "ApiResponse",
